gcc/testsuite/rust/rustc/ui/self/arbitrary_self_types_pin_needing_borrow_dg.rs
use std::pin::Pin;
struct S;

impl S {
    fn x(self: Pin<&mut Self>) {
    }
}

fn main() {
    Pin::new(S).x();
// { dg-error ".E0599." "" { target *-*-* } .-1 }
// { dg-error ".E0599." "" { target *-*-* } .-2 }
}

